<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:background="@drawable/item_background"
    android:layout_marginBottom="8dp">

    <View
        android:id="@+id/priorityCircle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/priority_circle"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/titleEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/dateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>

        <TextView
            android:id="@+id/timeEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/priorityEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priority"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="4dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="end">

        <Button
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@drawable/button_background_small"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:backgroundTint="@drawable/button_background_small"/>
    </LinearLayout>
</LinearLayout>