<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_salad"
        app:title="Update Reminder"
        app:titleTextColor="@android:color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/editTextTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_title"
                android:inputType="text"
                android:background="@drawable/edittext_background"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_date"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:background="@drawable/edittext_background"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_time"
                android:inputType="none"
                android:focusable="false"
                android:clickable="true"
                android:background="@drawable/edittext_background"
                android:padding="16dp"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:id="@+id/priorityRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <RadioButton
                    android:id="@+id/lowPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low"
                    android:textColor="@android:color/black"/>

                <RadioButton
                    android:id="@+id/mediumPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/medium"
                    android:textColor="@android:color/black"/>

                <RadioButton
                    android:id="@+id/highPriority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high"
                    android:textColor="@android:color/black"/>
            </RadioGroup>

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_reminder"
                android:backgroundTint="@drawable/button_background"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>